; ModuleID = '/home/carl/AnghaBench/reactos/sdk/lib/3rdparty/libmpg123/extr_readers.c_bc_prepare.c'
source_filename = "/home/carl/AnghaBench/reactos/sdk/lib/3rdparty/libmpg123/extr_readers.c_bc_prepare.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bufferchain = type { i64, i32* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @bc_prepare(%struct.bufferchain* %0, i64 %1, i64 %2) #0 {
  %4 = alloca %struct.bufferchain*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i64, align 8
  store %struct.bufferchain* %0, %struct.bufferchain** %4, align 8
  store i64 %1, i64* %5, align 8
  store i64 %2, i64* %6, align 8
  %7 = load %struct.bufferchain*, %struct.bufferchain** %4, align 8
  %8 = load i64, i64* %5, align 8
  %9 = load i64, i64* %6, align 8
  %10 = call i32 @bc_poolsize(%struct.bufferchain* %7, i64 %8, i64 %9)
  %11 = load %struct.bufferchain*, %struct.bufferchain** %4, align 8
  %12 = getelementptr inbounds %struct.bufferchain, %struct.bufferchain* %11, i32 0, i32 1
  store i32* null, i32** %12, align 8
  %13 = load %struct.bufferchain*, %struct.bufferchain** %4, align 8
  %14 = getelementptr inbounds %struct.bufferchain, %struct.bufferchain* %13, i32 0, i32 0
  store i64 0, i64* %14, align 8
  %15 = load %struct.bufferchain*, %struct.bufferchain** %4, align 8
  %16 = call i32 @bc_init(%struct.bufferchain* %15)
  ret void
}

declare dso_local i32 @bc_poolsize(%struct.bufferchain*, i64, i64) #1

declare dso_local i32 @bc_init(%struct.bufferchain*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
